// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`单个 正常解析 1`] = `
Object {
  "_class": "text",
  "attributedString": Object {
    "_class": "attributedString",
    "attributes": Array [
      Object {
        "_class": "stringAttribute",
        "attributes": Object {
          "MSAttributedStringColorAttribute": Object {
            "_class": "color",
            "alpha": 1,
            "blue": 0,
            "green": 0,
            "red": 0,
          },
          "MSAttributedStringFontAttribute": Object {
            "_class": "fontDescriptor",
            "attributes": Object {
              "name": "PingFangSC-Regular",
              "size": 16,
            },
          },
          "MSAttributedStringTextTransformAttribute": 0,
          "kerning": 0,
          "paragraphStyle": Object {
            "_class": "paragraphStyle",
            "alignment": 0,
            "maximumLineHeight": 22,
            "minimumLineHeight": 22,
          },
          "strikethroughStyle": 0,
          "underlineStyle": 0,
        },
        "length": 3,
        "location": 0,
      },
    ],
    "string": "123",
  },
  "automaticallyDrawOnUnderlyingPath": false,
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "UUID",
  "dontSynchroniseWithSymbol": false,
  "exportOptions": Object {
    "_class": "exportOptions",
    "exportFormats": Array [],
    "includedLayerIds": Array [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": Object {
    "_class": "rect",
    "constrainProportions": false,
    "height": 22,
    "width": 25.609375,
    "x": 8,
    "y": 8,
  },
  "glyphBounds": "",
  "hasClippingMask": false,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "lineSpacingBehaviour": 2,
  "name": "123",
  "nameIsFixed": false,
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": Object {
    "_class": "style",
    "borderOptions": Object {
      "_class": "borderOptions",
      "dashPattern": Array [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": Array [],
    "colorControls": Object {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": Object {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "UUID",
    "endMarkerType": 0,
    "fills": Array [],
    "innerShadows": Array [],
    "miterLimit": 10,
    "shadows": Array [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
  "textBehaviour": 0,
  "userInfo": undefined,
}
`;

exports[`多个解析 多个解析 1`] = `
Object {
  "_class": "group",
  "booleanOperation": -1,
  "clippingMaskMode": 0,
  "do_objectID": "UUID",
  "exportOptions": Object {
    "_class": "exportOptions",
    "exportFormats": Array [],
    "includedLayerIds": Array [],
    "layerOptions": 0,
    "shouldTrim": false,
  },
  "frame": Object {
    "_class": "rect",
    "constrainProportions": false,
    "height": 44,
    "width": 1008,
    "x": 8,
    "y": 8,
  },
  "groupLayout": Object {
    "_class": "MSImmutableFreeformGroupLayout",
  },
  "hasClickThrough": false,
  "hasClippingMask": false,
  "isFixedToViewport": false,
  "isFlippedHorizontal": false,
  "isFlippedVertical": false,
  "isLocked": false,
  "isVisible": true,
  "layerListExpandedType": 0,
  "layers": Array [
    Object {
      "_class": "text",
      "attributedString": Object {
        "_class": "attributedString",
        "attributes": Array [
          Object {
            "_class": "stringAttribute",
            "attributes": Object {
              "MSAttributedStringColorAttribute": Object {
                "_class": "color",
                "alpha": 1,
                "blue": 0,
                "green": 0,
                "red": 0,
              },
              "MSAttributedStringFontAttribute": Object {
                "_class": "fontDescriptor",
                "attributes": Object {
                  "name": "PingFangSC-Regular",
                  "size": 16,
                },
              },
              "MSAttributedStringTextTransformAttribute": 0,
              "kerning": 0,
              "paragraphStyle": Object {
                "_class": "paragraphStyle",
                "alignment": 0,
                "maximumLineHeight": 22,
                "minimumLineHeight": 22,
              },
              "strikethroughStyle": 0,
              "underlineStyle": 0,
            },
            "length": 3,
            "location": 0,
          },
        ],
        "string": "123",
      },
      "automaticallyDrawOnUnderlyingPath": false,
      "booleanOperation": -1,
      "clippingMaskMode": 0,
      "do_objectID": "UUID",
      "dontSynchroniseWithSymbol": false,
      "exportOptions": Object {
        "_class": "exportOptions",
        "exportFormats": Array [],
        "includedLayerIds": Array [],
        "layerOptions": 0,
        "shouldTrim": false,
      },
      "frame": Object {
        "_class": "rect",
        "constrainProportions": false,
        "height": 22,
        "width": 25.609375,
        "x": 0,
        "y": 0,
      },
      "glyphBounds": "",
      "hasClippingMask": false,
      "isFixedToViewport": false,
      "isFlippedHorizontal": false,
      "isFlippedVertical": false,
      "isLocked": false,
      "isVisible": true,
      "layerListExpandedType": 0,
      "lineSpacingBehaviour": 2,
      "name": "123",
      "nameIsFixed": false,
      "resizingConstraint": 63,
      "resizingType": 0,
      "rotation": 0,
      "shouldBreakMaskChain": false,
      "style": Object {
        "_class": "style",
        "borderOptions": Object {
          "_class": "borderOptions",
          "dashPattern": Array [],
          "isEnabled": true,
          "lineCapStyle": 0,
          "lineJoinStyle": 0,
        },
        "borders": Array [],
        "colorControls": Object {
          "_class": "colorControls",
          "brightness": 0,
          "contrast": 1,
          "hue": 0,
          "isEnabled": false,
          "saturation": 1,
        },
        "contextSettings": Object {
          "_class": "graphicsContextSettings",
          "blendMode": 0,
          "opacity": 1,
        },
        "do_objectID": "UUID",
        "endMarkerType": 0,
        "fills": Array [],
        "innerShadows": Array [],
        "miterLimit": 10,
        "shadows": Array [],
        "startMarkerType": 0,
        "windingRule": 1,
      },
      "textBehaviour": 0,
      "userInfo": undefined,
    },
    Object {
      "_class": "text",
      "attributedString": Object {
        "_class": "attributedString",
        "attributes": Array [
          Object {
            "_class": "stringAttribute",
            "attributes": Object {
              "MSAttributedStringColorAttribute": Object {
                "_class": "color",
                "alpha": 1,
                "blue": 0,
                "green": 0,
                "red": 0,
              },
              "MSAttributedStringFontAttribute": Object {
                "_class": "fontDescriptor",
                "attributes": Object {
                  "name": "PingFangSC-Regular",
                  "size": 16,
                },
              },
              "MSAttributedStringTextTransformAttribute": 0,
              "kerning": 0,
              "paragraphStyle": Object {
                "_class": "paragraphStyle",
                "alignment": 0,
                "maximumLineHeight": 22,
                "minimumLineHeight": 22,
              },
              "strikethroughStyle": 0,
              "underlineStyle": 0,
            },
            "length": 5,
            "location": 0,
          },
        ],
        "string": "13333",
      },
      "automaticallyDrawOnUnderlyingPath": false,
      "booleanOperation": -1,
      "clippingMaskMode": 0,
      "do_objectID": "UUID",
      "dontSynchroniseWithSymbol": false,
      "exportOptions": Object {
        "_class": "exportOptions",
        "exportFormats": Array [],
        "includedLayerIds": Array [],
        "layerOptions": 0,
        "shouldTrim": false,
      },
      "frame": Object {
        "_class": "rect",
        "constrainProportions": false,
        "height": 22,
        "width": 44.8125,
        "x": 0,
        "y": 22,
      },
      "glyphBounds": "",
      "hasClippingMask": false,
      "isFixedToViewport": false,
      "isFlippedHorizontal": false,
      "isFlippedVertical": false,
      "isLocked": false,
      "isVisible": true,
      "layerListExpandedType": 0,
      "lineSpacingBehaviour": 2,
      "name": "13333",
      "nameIsFixed": false,
      "resizingConstraint": 63,
      "resizingType": 0,
      "rotation": 0,
      "shouldBreakMaskChain": false,
      "style": Object {
        "_class": "style",
        "borderOptions": Object {
          "_class": "borderOptions",
          "dashPattern": Array [],
          "isEnabled": true,
          "lineCapStyle": 0,
          "lineJoinStyle": 0,
        },
        "borders": Array [],
        "colorControls": Object {
          "_class": "colorControls",
          "brightness": 0,
          "contrast": 1,
          "hue": 0,
          "isEnabled": false,
          "saturation": 1,
        },
        "contextSettings": Object {
          "_class": "graphicsContextSettings",
          "blendMode": 0,
          "opacity": 1,
        },
        "do_objectID": "UUID",
        "endMarkerType": 0,
        "fills": Array [],
        "innerShadows": Array [],
        "miterLimit": 10,
        "shadows": Array [],
        "startMarkerType": 0,
        "windingRule": 1,
      },
      "textBehaviour": 0,
      "userInfo": undefined,
    },
  ],
  "name": "编组",
  "nameIsFixed": false,
  "resizingConstraint": 63,
  "resizingType": 0,
  "rotation": 0,
  "shouldBreakMaskChain": false,
  "style": Object {
    "_class": "style",
    "borderOptions": Object {
      "_class": "borderOptions",
      "dashPattern": Array [],
      "isEnabled": true,
      "lineCapStyle": 0,
      "lineJoinStyle": 0,
    },
    "borders": Array [],
    "colorControls": Object {
      "_class": "colorControls",
      "brightness": 0,
      "contrast": 1,
      "hue": 0,
      "isEnabled": false,
      "saturation": 1,
    },
    "contextSettings": Object {
      "_class": "graphicsContextSettings",
      "blendMode": 0,
      "opacity": 1,
    },
    "do_objectID": "UUID",
    "endMarkerType": 0,
    "fills": Array [],
    "innerShadows": Array [],
    "miterLimit": 10,
    "shadows": Array [],
    "startMarkerType": 0,
    "windingRule": 1,
  },
  "userInfo": null,
}
`;
